fix(client): make ice4j candidate reflection parsing more robust